Done with Assignment 2

--- a/Week2-tables_lists.html
+++ b/Week2-tables_lists.html
@@ -6,7 +6,12 @@
     <title>ASSIGNMENT 2: HTML LISTS AND TABLES</title>
   </head>
   <body>
+    <h1>HTML TABLE</h1>
     <table border="3">
+      <caption>
+        TIME TABLE FOR STUDENTS
+      </caption>
+
       <thead>
         <tr>
           <th colspan="6">Time Table</th>
@@ -59,5 +64,39 @@
         </tr>
       </tbody>
     </table>
+    <hr />
+    <hr />
+
+    <h2>HTML LISTS</h2>
+    <h3>Project</h3>
+    <ul type="square">
+      <li>Sustainable Urban Planning and Development in 21st Century Cities</li>
+      <li>
+        Exploring the Impact of Renewable Energy on Environmental Sustainability
+      </li>
+      <li>
+        Innovations in Healthcare: The Role of Telemedicine and Digital Health
+      </li>
+      <li>
+        Artificial Intelligence in Business: A Case Study of its Applications
+        and Challenges
+      </li>
+      <li>
+        Cultural Heritage Preservation: Strategies and Technologies for
+        Conservation
+      </li>
+    </ul>
+    <br />
+    <hr />
+    <br />
+
+    <h3>History</h3>
+    <ol type="a">
+      <li>The Industrial Revolution: Impact on Society and Economy</li>
+      <li>The American Civil War: Causes, Events, and Aftermath</li>
+      <li>The Renaissance: A Cultural and Artistic Revolution in Europe</li>
+      <li>The Fall of the Roman Empire: Factors and Consequences</li>
+      <li>The Space Race: The Cold War Competition for Space Dominance</li>
+    </ol>
   </body>
 </html>
