Updated the repo

--- a/Week2-tables_lists.html
+++ b/Week2-tables_lists.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="HTML-Lists and Tables" />
+    <link rel="shortcut icon" href="./Images/html.jpg" type="image/x-icon" />
     <title>ASSIGNMENT 2: HTML LISTS AND TABLES</title>
   </head>
   <body>
@@ -38,7 +40,20 @@
 
         <tr>
           <td>Social</td>
-          <td>History</td>
+          <td>
+            History
+            <ol type="a">
+              <li>The Industrial Revolution: Impact on Society and Economy</li>
+              <li>The American Civil War: Causes, Events, and Aftermath</li>
+              <li>
+                The Renaissance: A Cultural and Artistic Revolution in Europe
+              </li>
+              <li>The Fall of the Roman Empire: Factors and Consequences</li>
+              <li>
+                The Space Race: The Cold War Competition for Space Dominance
+              </li>
+            </ol>
+          </td>
           <td>English</td>
           <td>Social</td>
           <td>Sports</td>
@@ -53,12 +68,49 @@
           <td>Maths</td>
           <td>Science</td>
           <td>Maths</td>
-          <td rowspan="2">Project</td>
+          <td rowspan="2">
+            Project
+            <ul type="square">
+              <li>
+                Sustainable Urban Planning and Development in 21st Century
+                Cities
+              </li>
+              <li>
+                Exploring the Impact of Renewable Energy on Environmental
+                Sustainability
+              </li>
+              <li>
+                Innovations in Healthcare: The Role of Telemedicine and Digital
+                Health
+              </li>
+              <li>
+                Artificial Intelligence in Business: A Case Study of its
+                Applications and Challenges
+              </li>
+              <li>
+                Cultural Heritage Preservation: Strategies and Technologies for
+                Conservation
+              </li>
+            </ul>
+          </td>
         </tr>
 
         <tr>
           <td>Social</td>
-          <td>History</td>
+          <td>
+            History
+            <ol type="a">
+              <li>The Industrial Revolution: Impact on Society and Economy</li>
+              <li>The American Civil War: Causes, Events, and Aftermath</li>
+              <li>
+                The Renaissance: A Cultural and Artistic Revolution in Europe
+              </li>
+              <li>The Fall of the Roman Empire: Factors and Consequences</li>
+              <li>
+                The Space Race: The Cold War Competition for Space Dominance
+              </li>
+            </ol>
+          </td>
           <td>English</td>
           <td>Social</td>
         </tr>
