--- a/Week3-forms.html
+++ b/Week3-forms.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="HTML-Forms" />
+    <link rel="shortcut icon" href="./Images/html.jpg" type="image/x-icon" />
     <title>ASSIGNMENT 3: HTML FORMS</title>
   </head>
   <body>
