--- a/Week1-index.html
+++ b/Week1-index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Richard Essuman" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="HTML Structure and Text Formatting" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./Images/html.jpg" type="image/x-icon" />
     <title>ASSIGNMENT 1: HTML DOCUMENT STRUCTURE AND TEXT FORMATTING</title>
   </head>
   <body>
