Completed and done with Assignment 4

--- a/Week1-index.html
+++ b/Week1-index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="author" content="Richard Essuman" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="HTML Structure and Text Formatting" />
+    <meta
+      name="description"
+      content="Enhance your web development skills with our comprehensive resources on HTML structure and text formatting techniques."
+    />
+    <meta name="keywords" content="HTML Structure and Text Formatting" />
     <link rel="shortcut icon" href="./Images/html.jpg" type="image/x-icon" />
     <title>ASSIGNMENT 1: HTML DOCUMENT STRUCTURE AND TEXT FORMATTING</title>
   </head>
