--- a/Week3-forms.html
+++ b/Week3-forms.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="HTML-Forms" />
+    <meta
+      name="description"
+      content="Unlock the potential of HTML forms and attributes to create interactive and dynamic web pages."
+    />
+    <meta name="keywords" content="HTML-Forms and Attributes" />
     <link rel="shortcut icon" href="./Images/html.jpg" type="image/x-icon" />
     <title>ASSIGNMENT 3: HTML FORMS</title>
   </head>
