--- a/Week2-tables_lists.html
+++ b/Week2-tables_lists.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="HTML-Lists and Tables" />
+    <meta
+      name="description"
+      content="Master the art of HTML-Lists and Tables to optimize the structure and presentation of your website's content."
+    />
+    <meta
+      name="keywords"
+      content="HTML-Lists and Tables and their respective Attributes"
+    />
     <link rel="shortcut icon" href="./Images/html.jpg" type="image/x-icon" />
     <title>ASSIGNMENT 2: HTML LISTS AND TABLES</title>
   </head>
